lustre/tests/ost-pools.sh
@@ -533,6 +533,9 @@ sub_test_5() {
 	[[ $? -eq 0 ]] || error "pool_list $FSNAME failed."
 
 	do_facet mgs lctl pool_add $FSNAME.$POOL $TGT_ALL
+	wait_update_facet $SINGLEMDS "lctl pool_list $FSNAME.$POOL |
+		wc -l" "$((OSTCOUNT + 1))" ||
+			error "MDS: pool_list $FSNAME.$POOL failed"
 
 	$LCMD pool_list $FSNAME.$POOL
 	[[ $? -eq 0 ]] || error "pool_list $FSNAME.$POOL failed."
